# ast2md-cli

./: Cargo.toml
.github/workflows/: semgrep.yml
src/: cli_args.rs  generated.rs  main.rs  swift_dump_ast.pest
tests/: first.ast  integration_test.rs
tests/input/: ClassTypeUsed.ast  ClassTypeUsed.swift  ClassesTypesUsed.ast  ClassesTypesUsed.swift  ClassesTypesUsedReverse.ast  ClassesTypesUsedReverse.swift  EmptyClass.ast  EmptyClass.swift  EmptyEnum.ast  EmptyEnum.swift  EmptyMultiStruct.ast  EmptyMultiStruct.swift  EmptyNestedStruct.ast  EmptyNestedStruct.swift  EmptyStruct.ast  EmptyStruct.swift  MethodUsed.ast  MethodUsed.swift  NestedPropertiesAndMethodsUsed.ast  NestedPropertiesAndMethodsUsed.swift  NestedStructWithProperties.ast  NestedStructWithProperties.swift  NestedStructWithPropertiesIn2ndType.ast  NestedStructWithPropertiesIn2ndType.swift  NestedStructWithPropertiesIn3Types.ast  NestedStructWithPropertiesIn3Types.swift  PropertiesAndMethodsUsed.ast  PropertiesAndMethodsUsed.swift  PropertyAndMethodUsed.ast  PropertyAndMethodUsed.swift  PropertyUsed.ast  PropertyUsed.swift  Protocol1.ast  Protocol1.swift  Return.ast  Return.swift  StructWithMethods.ast  StructWithMethods.swift  StructWithProperties.ast  StructWithProperties.swift  (+2 more)
tests/output/: ClassTypeUsed.json  ClassesTypesUsed.json  ClassesTypesUsedReverse.json  EmptyClass.json  EmptyMultiStruct.json  EmptyNestedStruct.json  EmptyStruct.json  MethodUsed.json  NestedPropertiesAndMethodsUsed.json  NestedStructWithProperties.json  NestedStructWithPropertiesIn2ndType.json  PropertiesAndMethodsUsed.json  (+8 more)
