[package]
name = "ast2md-cli"
version = "0.3.0"
authors = ["Jorge D. Ortiz Fuentes <jdortiz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast2md = { path = "../ast2mdlib" }
clap = { version = "*", features = ["derive"] }
env_logger = "*"
log = "*"
pest = "*"
pest_derive = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
assert_cmd = "*"
predicates = "*"
rstest = "*"
